tests/ui/cp-wrong-shot.stderr
error[E0624]: associated function `new` is private
  --> tests/ui/cp-wrong-shot.rs:17:23
   |
17 |         unsafe { Txn::new(LaneId::new(1), hibana::control::Gen::ZERO) };
   |                       ^^^ private associated function
   |
  ::: src/control/automaton/txn.rs
   |
   |     pub(crate) unsafe fn new(lane: LaneId, generation: Gen) -> Self {
   |     --------------------------------------------------------------- private associated function defined here

error[E0599]: the method `commit` exists for struct `InAcked<TestInv, hibana::control::Many>`, but its trait bounds were not satisfied
  --> tests/ui/cp-wrong-shot.rs:23:28
   |
23 |     let _closed = in_acked.commit(&mut tap);
   |                            ^^^^^^ method cannot be called on `InAcked<TestInv, hibana::control::Many>` due to unsatisfied trait bounds
   |
  ::: src/control/types.rs
   |
   | pub struct Many;
   | --------------- doesn't satisfy `hibana::control::Many: OneShot`
   |
   = note: the following trait bounds were not satisfied:
           `hibana::control::Many: OneShot`
